All-in-one Chrome extension toolkit for Solana KOLs to analyze tokens and create promotional content with smart templates, multi-platform posting, and comprehensive token analytics
🚀 KOLsuite - Professional toolkit for Solana Key Opinion Leaders

✨ Features:
• Multi-platform token detection (GMGN, NeoBull X, Trojan, Axiom, Padre)
• Comprehensive token analytics (price, MCAP, liquidity, holders, security)
• Smart caption generator with customizable templates and parameters
• One-click posting to X, Telegram, and Discord
• Real-time bonding curve tracking
• Subscription tier management
• Emoji picker and parameter insertion

Built with TypeScript, Vite, and Chrome Manifest V3 for production-grade performance and security.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,6 +20,8 @@
     "https://*.axiom.trade/*",
     "https://trojan.com/*",
     "https://*.trojan.com/*",
+    "https://neo.bullx.io/*",
+    "https://*.bullx.io/*",
     "https://api.mainnet-beta.solana.com/*",
     "https://solana-api.projectserum.com/*",
     "https://rpc.ankr.com/*",
@@ -31,7 +33,20 @@
   },
   
   "action": {
-    "default_title": "KOLsuite"
+    "default_title": "KOLsuite",
+    "default_icon": {
+      "16": "img/kolsuite-icon.png",
+      "32": "img/kolsuite-icon.png",
+      "48": "img/kolsuite-icon.png",
+      "128": "img/kolsuite-icon.png"
+    }
+  },
+
+  "icons": {
+    "16": "img/kolsuite-icon.png",
+    "32": "img/kolsuite-icon.png",
+    "48": "img/kolsuite-icon.png",
+    "128": "img/kolsuite-icon.png"
   },
 
   "side_panel": {
@@ -47,7 +62,9 @@
         "https://axiom.trade/*",
         "https://*.axiom.trade/*",
         "https://trojan.com/*",
-        "https://*.trojan.com/*"
+        "https://*.trojan.com/*",
+        "https://neo.bullx.io/*",
+        "https://*.bullx.io/*"
       ],
       "js": ["content/index.js"],
       "run_at": "document_start",
@@ -69,7 +86,9 @@
         "https://axiom.trade/*",
         "https://*.axiom.trade/*",
         "https://trojan.com/*",
-        "https://*.trojan.com/*"
+        "https://*.trojan.com/*",
+        "https://neo.bullx.io/*",
+        "https://*.bullx.io/*"
       ]
     }
   ],
