--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,104 +1,1 @@
-{
-  "manifest_version": 3,
-  "name": "KOLsuite",
-  "version": "1.0.0",
-  "description": "All-in-one toolkit for KOLs to analyze and promote Solana tokens",
-  
-  "permissions": [
-    "storage",
-    "activeTab",
-    "scripting",
-    "sidePanel",
-    "webRequest"
-  ],
-
-  "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' data: https: blob:; frame-src 'self' https://www.youtube.com https://youtube.com https://youtu.be https://www.youtube-nocookie.com https://youtube-nocookie.com https://github1s.com https://*.github1s.com"
-  },
-  
-  "host_permissions": [
-    "https://gmgn.ai/*",
-    "https://*.gmgn.ai/*",
-    "https://trade.padre.gg/*",
-    "https://axiom.trade/*",
-    "https://*.axiom.trade/*",
-    "https://trojan.com/*",
-    "https://*.trojan.com/*",
-    "https://neo.bullx.io/*",
-    "https://*.bullx.io/*",
-    "https://api.mainnet-beta.solana.com/*",
-    "https://solana-api.projectserum.com/*",
-    "https://rpc.ankr.com/*",
-    "https://mainnet.helius-rpc.com/*",
-    "http://localhost:*/*",
-    "https://localhost:*/*",
-    "https://www.youtube.com/*",
-    "https://youtube.com/*",
-    "https://youtu.be/*"
-  ],
-  
-  "background": {
-    "service_worker": "background/serviceWorker.js"
-  },
-  
-  "action": {
-    "default_title": "KOLsuite",
-    "default_icon": {
-      "16": "img/kolsuite-icon.png",
-      "32": "img/kolsuite-icon.png",
-      "48": "img/kolsuite-icon.png",
-      "128": "img/kolsuite-icon.png"
-    }
-  },
-
-  "icons": {
-    "16": "img/kolsuite-icon.png",
-    "32": "img/kolsuite-icon.png",
-    "48": "img/kolsuite-icon.png",
-    "128": "img/kolsuite-icon.png"
-  },
-
-  "side_panel": {
-    "default_path": "sidepanel/sidepanel.html"
-  },
-  
-  "content_scripts": [
-    {
-      "matches": [
-        "https://gmgn.ai/*",
-        "https://*.gmgn.ai/*",
-        "https://trade.padre.gg/*",
-        "https://axiom.trade/*",
-        "https://*.axiom.trade/*",
-        "https://trojan.com/*",
-        "https://*.trojan.com/*",
-        "https://neo.bullx.io/*",
-        "https://*.bullx.io/*"
-      ],
-      "js": ["content/index.js"],
-      "run_at": "document_start",
-      "all_frames": true
-    }
-  ],
-  
-  "web_accessible_resources": [
-    {
-      "resources": [
-        "content/overlay.css"
-      ],
-      "matches": [
-        "https://gmgn.ai/*",
-        "https://*.gmgn.ai/*",
-        "https://trade.padre.gg/*",
-        "https://axiom.trade/*",
-        "https://*.axiom.trade/*",
-        "https://trojan.com/*",
-        "https://*.trojan.com/*",
-        "https://neo.bullx.io/*",
-        "https://*.bullx.io/*"
-      ]
-    }
-  ],
-  
-  "author": "Token Peek Team"
-}
+{"manifest_version":3,"name":"KOLsuite","version":"1.0.0","description":"All-in-one toolkit for KOLs to analyze and promote Solana tokens","permissions":["storage","activeTab","scripting","sidePanel","webRequest"],"content_security_policy":{"extension_pages":"script-src 'self'; object-src 'self'; img-src 'self' data: https: blob:; frame-src 'self' https://www.youtube.com https://youtube.com https://youtu.be https://www.youtube-nocookie.com https://youtube-nocookie.com https://github1s.com https://*.github1s.com"},"host_permissions":["https://gmgn.ai/*","https://*.gmgn.ai/*","https://trade.padre.gg/*","https://axiom.trade/*","https://*.axiom.trade/*","https://trojan.com/*","https://*.trojan.com/*","https://neo.bullx.io/*","https://*.bullx.io/*","https://api.mainnet-beta.solana.com/*","https://solana-api.projectserum.com/*","https://rpc.ankr.com/*","https://mainnet.helius-rpc.com/*","http://localhost:*/*","https://localhost:*/*","https://www.youtube.com/*","https://youtube.com/*","https://youtu.be/*","https://pump.fun/*","https://*.pump.fun/*","https://app.telemetry.io/*","https://*.telemetry.io/*"],"background":{"service_worker":"background/serviceWorker.js"},"action":{"default_title":"KOLsuite","default_icon":{"16":"img/kolsuite-icon.png","32":"img/kolsuite-icon.png","48":"img/kolsuite-icon.png","128":"img/kolsuite-icon.png"}},"icons":{"16":"img/kolsuite-icon.png","32":"img/kolsuite-icon.png","48":"img/kolsuite-icon.png","128":"img/kolsuite-icon.png"},"side_panel":{"default_path":"sidepanel/sidepanel.html"},"content_scripts":[{"matches":["https://gmgn.ai/*","https://*.gmgn.ai/*","https://trade.padre.gg/*","https://axiom.trade/*","https://*.axiom.trade/*","https://trojan.com/*","https://*.trojan.com/*","https://neo.bullx.io/*","https://*.bullx.io/*","https://pump.fun/*","https://*.pump.fun/*","https://app.telemetry.io/*","https://*.telemetry.io/*"],"js":["content/index.js"],"run_at":"document_start","all_frames":true}],"web_accessible_resources":[{"resources":["content/overlay.css"],"matches":["https://gmgn.ai/*","https://*.gmgn.ai/*","https://trade.padre.gg/*","https://axiom.trade/*","https://*.axiom.trade/*","https://trojan.com/*","https://*.trojan.com/*","https://neo.bullx.io/*","https://*.bullx.io/*","https://pump.fun/*","https://*.pump.fun/*","https://app.telemetry.io/*","https://*.telemetry.io/*"]}],"author":"Token Peek Team"}
